<resources>
    <string name="app_name">Mealer</string>
    <!-- Generic -->
    <string name="btnYes">Yes</string>
    <string name="btnNo">No</string>
    <string name="btnCancel">Cancel</string>
    <string name="btnBack">Back</string>
    <string name="btnPurchase">Purchase</string>
    <string name="btnBuy">Buy</string>
    <!-- To classify later -->
    <string name="btnLogin">Login</string>
    <string name="btnRegisterClient">Register as a client</string>
    <string name="btnRegisterCook">Register as a Cook</string>
    <string name="btnVoidCheck">Add a image</string>
    <string name="btnInsertVoid">Insert void Check</string>
    <string name="fieldLastName" />
    <string name="btnConfirmRegisterCook">Register as Cook</string>
    <string name="fieldAdress" />
    <string name="loginEmailHint">Your email</string>
    <string name="loginPasswordHint">Your password</string>
    <string name="loginBtn">Login</string>
    <string name="fieldMenuName" />
    <string name="fieldMealType" />
    <string name="fieldCuisineType" />
    <string name="fieldAllergens" />
    <string name="fieldIngredients" />
    <string name="fieldDescription" />
    <string name="btnAddItem">Add item to menu</string>
    <string name="btnDebug">Debug mode (remove at end)</string>
    <string name="btnCookMenu">Create a specific meal</string>
    <string name="fieldCookDescription" />
    <string name="hintEmail">Enter your email</string>
    <string name="hintPassword">Enter your password</string>
    <string name="hintFirstName">Enter your first name</string>
    <string name="hintLastName">Enter your last name</string>
    <string name="hintAddress">Enter your address</string>
    <string name="hintCreditCard">Enter your credit card number</string>
    <string name="hintExpiry">MM/YY (credit card expiry)</string>
    <string name="hintDescription">Enter a description of yourself</string>
    <string name="btnCloseComplaint">Back</string>
    <string name="btnDebugComplaint">Open Complaint Menu</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btnDismiss">Dismiss Complaint</string>
    <string name="btnSuspension">Ban Cook</string>
    <string name="txtTitle">(Title should be here)</string>
    <string name="logOffSusBtn">Log Off</string>
    <string name="mealListBtn">View or Create Meals</string>
    <string name="PurchaseReqBtn">See Purchase Requests</string>
    <string name="settingsMngmntBtn">Manage Settings</string>
    <string name="btnSearchForFood">Search for food</string>
    <string name="btnOrderHistory">Order History</string>
    <string name="btnPaymentMethod">Payment Method</string>

    <!-- ui/PurchaseActivity.java -->
    <string name="purchaseact_title">Purchase</string>
    <string name="purchaseact_cook">from</string>
    <string name="purchaseact_quantity">Quantity: </string>
    <string name="purchaseact_quantity_hint">Please enter a quantity</string>
    <string name="purchaseact_dialog">Purchase "%s" x%d for %.2f?</string>
    <string name="purchaseact_dialogtitle">Purchase Confirmation</string>
</resources>