<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.CookAddMeal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="Add a meal menu"
            android:textSize="34sp" />

        <EditText
            android:id="@+id/fieldMenuName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="Name of item"
            android:inputType="textPersonName"
            android:text="@string/fieldMenuName" />

        <EditText
            android:id="@+id/fieldMealType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="Meal type (e.g., main dish, soup, desert, etc.)"
            android:inputType="textPersonName"
            android:text="@string/fieldMealType" />

        <EditText
            android:id="@+id/fieldCuisineType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="Cuisine type (e.g., Italian, Chinese, Greek, etc.)"
            android:inputType="textPersonName"
            android:text="@string/fieldCuisineType" />

        <EditText
            android:id="@+id/fieldAllergens"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="Allergens (e.g., Fish, Milk, Eggs, etc.)"
            android:inputType="textPersonName"
            android:text="@string/fieldAllergens" />

        <EditText
            android:id="@+id/fieldIngredients"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:ems="10"
            android:hint="List of Ingredients"
            android:inputType="textPersonName"
            android:text="@string/fieldIngredients" />

        <EditText
            android:id="@+id/fieldDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:ems="10"
            android:hint="Description of item"
            android:inputType="textPersonName"
            android:text="@string/fieldDescription" />

        <Button
            android:id="@+id/btnAddItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="btnAddItem"
            android:text="@string/btnAddItem" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>